# demo-icp-0812

./: Cargo.toml  dfx.json  package-lock.json  package.json
backend/canisters/user/: Cargo.toml  can.did
backend/canisters/user/src/: lib.rs  memory.rs
backend/canisters/user/src/args/lifecycle/: init.rs
backend/canisters/user/src/args/queries/: post.rs  posts.rs
backend/canisters/user/src/args/updates/: create_post.rs  mod.rs  remove_post.rs
backend/canisters/user/src/lifecycle/: init.rs  mod.rs
backend/canisters/user/src/model/: post.rs  posts.rs
backend/libraries/canister_state_macros/: Cargo.toml
backend/libraries/types/: Cargo.toml  can.did
backend/libraries/types/src/: build_version.rs  cycles.rs  lib.rs  posts.rs  timestamped.rs
backend/libraries/utils/: Cargo.toml
backend/libraries/utils/src/: env.rs  lib.rs  memory.rs  time.rs
backend/libraries/utils/src/canister/: mod.rs
backend/libraries/utils/src/env/: canister.rs  test.rs
src/app/: layout.tsx  page.tsx
src/app/api/uploadData/: route.ts
src/components/storage/: storage.tsx
src/lib/: storage.ts
